# gtk

./: CMakeLists.txt  LICENSE  cJSON.c  config.h.in  giosocket.drawio  iniparser.c  mylog.c  mylog.h  mymodbus.h  readme.md  test.c  win_signal.c  window1.glade  windows.blp
log/: mylog.c
mymalloc/: mymalloc.c  mymalloc.h
myobject/: myobject.c  myobject.h
